@@ -1,3 +1,5 @@
+2013-Dec-12 salnikov	Tag V07-02-11.  Derived from psddldata tag V00-04-55 and psddl V00-12-09.  Fixing bug in DDL definition of Ipimb::ConfigV1::capacitorValues(),
+                                        Small changes in Andor config class to support HDF5 schema. Removed unnecessary methods from couple of EVR classes.  
 2013-Dec-12 salnikov	Tag V07-02-10.  Derived from psddldata tag V00-04-53 and psddl V00-12-09.  Generating implementation of EpixSampler::ConfigV1::sampleInterval_sec().
 2013-Nov-12 salnikov	Tag V07-02-07.  Derived from psddldata tag V00-04-47 and psddl V00-12-04.  Added capacitorValues method to ipimb Config types.
 2013-Sep-20 weaver	Tag V07-00-03.  Derived from psddldata tag V00-04-37 and psddl V00-08-14.  Added BldAcqADCV1 and TimePix::DataV2(DataV1&) ctor.
